--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/react": "~18.0.27",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
